RESOLVED FIXED164062
Element parameter to CanvasRenderingContext2D.drawFocusIfNeeded() should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=164062
Summary Element parameter to CanvasRenderingContext2D.drawFocusIfNeeded() should not ...
Chris Dumez
Reported 2016-10-27 09:07:14 PDT
Element parameter to CanvasRenderingContext2D.drawFocusIfNeeded() should not be nullable: - https://html.spec.whatwg.org/#canvasuserinterface Firefox and Chrome agree with the specification.
Attachments
Patch (7.43 KB, patch)
2016-10-27 09:08 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-10-27 09:08:30 PDT
WebKit Commit Bot
Comment 2 2016-10-27 13:11:43 PDT
Comment on attachment 293025 [details] Patch Clearing flags on attachment: 293025 Committed r208000: <http://trac.webkit.org/changeset/208000>
WebKit Commit Bot
Comment 3 2016-10-27 13:11:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.