Element parameter to CanvasRenderingContext2D.drawFocusIfNeeded() should not be nullable https://bugs.webkit.org/show_bug.cgi?id=164062

Reviewed by Darin Adler.

Source/WebCore:

Element parameter to CanvasRenderingContext2D.drawFocusIfNeeded() should not be nullable:
- https://html.spec.whatwg.org/#canvasuserinterface

Firefox and Chrome agree with the specification.

Test: fast/canvas/draw-focus-if-needed-null-element.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::drawFocusIfNeeded):
(WebCore::CanvasRenderingContext2D::drawFocusIfNeededInternal):
* html/canvas/CanvasRenderingContext2D.h:
* html/canvas/CanvasRenderingContext2D.idl:

LayoutTests:

Add layout test coverage.

* fast/canvas/draw-focus-if-needed-null-element-expected.txt: Added.
* fast/canvas/draw-focus-if-needed-null-element.html: Added.


Canonical link: https://commits.webkit.org/181789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208000 268f45cc-cd09-0410-ab3c-d52691b4dbfc