Source/WebCore/html/canvas/CanvasRenderingContext2D.h
@@ -197,8 +197,8 @@ public:
     void webkitPutImageDataHD(ImageData&, float dx, float dy);
     void webkitPutImageDataHD(ImageData&, float dx, float dy, float dirtyX, float dirtyY, float dirtyWidth, float dirtyHeight);
 
-    void drawFocusIfNeeded(Element*);
-    void drawFocusIfNeeded(DOMPath&, Element*);
+    void drawFocusIfNeeded(Element&);
+    void drawFocusIfNeeded(DOMPath&, Element&);
 
     float webkitBackingStorePixelRatio() const { return 1; }
 
@@ -353,7 +353,7 @@ private:
     bool isPointInPathInternal(const Path&, float x, float y, WindingRule);
     bool isPointInStrokeInternal(const Path&, float x, float y);
 
-    void drawFocusIfNeededInternal(const Path&, Element*);
+    void drawFocusIfNeededInternal(const Path&, Element&);
 
     void clearCanvas();
     Path transformAreaToDevice(const Path&) const;
